[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-ai-commons-mcp"
version = "0.1.1"
description = "MCP server exposing a federated AI-commons governance simulation as callable tools, plus a stateless governance compliance oracle verified against the simulation's own logic."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tobias Self" }
]
dependencies = [
    "mesa",
    "numpy",
    "networkx",
    "mcp",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/Toby-Self/Federated-AI-Commons-Model"
Findings = "https://github.com/Toby-Self/Federated-AI-Commons-Model/blob/main/FINDINGS.md"

[project.scripts]
federated-ai-commons-mcp = "federated_ai_commons_mcp_server:main"

[tool.hatch.build]
include = [
    "federated_ai_commons_model.py",
    "federated_ai_commons_mcp_server.py",
    "governance_compliance.py",
    "reference_gateway.py",
    "README.md",
    "FINDINGS.md",
]

